# meei

./: .gitignore  README.md
dashboard/: app.js  index.html
docs/: chat-providers.md
examples/: quick_test.py  set_keys.py  test_all.py
nodejs/: package-lock.json  package.json
nodejs/src/: config.ts  exceptions.ts  index.ts  tracker.ts
nodejs/src/chat/: base.ts  deepseek.ts  gemini.ts  grok.ts  groq.ts  index.ts  openai.ts  qwen.ts
python/: pyproject.toml
python/src/meei/: __init__.py  config.py  crypto.py  exceptions.py  tracker.py
python/src/meei/chat/: __init__.py  base.py  deepseek.py  gemini.py  grok.py  groq.py  openai.py  qwen.py
python/src/meei/image/: __init__.py
