[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meei"
version = "0.1.0"
description = "Personal AI SDK - Unified interface for multiple AI providers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Jeff" }]
keywords = ["ai", "sdk", "deepseek", "openai", "gemini", "qwen", "grok"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25.0",
    "pyyaml>=6.0",
    "cryptography>=41.0",
    "rich>=13.0",
    "typer>=0.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "black", "ruff"]

[project.scripts]
meei = "meei.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/meei"
Repository = "https://github.com/yourusername/meei"

[tool.hatch.build.targets.wheel]
packages = ["src/meei"]
